test/fixtures/no-color.txt

test.js:1:6: note: this is a note
let 7x = 7;
     ^
test.js:1:6: warning: this is another warning
let 7x = 7;
     ^
test.js:1:6: error: this is an error
let 7x = 7;
     ^

1 warning and 1 error generated.